src/style_dashboard.css
/* ... */
.MuiInput-underline:before {
  left: 0;
  right: 0;
  bottom: 0;
  content: "\00a0";
  position: absolute;
  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-bottom: none !important;
  pointer-events: none;
}
.search-icon-form {
  padding: 1rem;
  cursor: pointer;
}

.search-icon-datatable {
  cursor: pointer;
}
.data-table-button {
  width: 20%;
  float: left;
  padding: 1rem;
}

header nav.navbar .navbar-collapse.offcanvas-collapse ul li.nav-item .dropdown-item.active {
  background-color: transparent;
  color: #f1880e;
}
.search-icon-datatable {
  cursor: pointer;
}
.data-table-button {
  width: 20%;
  float: left;
  padding: 1rem;
}
.link-button {
  border: none;
  background: none;
}

button.btn-cancel-dialog {
  background-color: #fff;
  border-radius: 50px;
  color: #000;
  border: none;
  margin: 0 0.5rem;
  box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.16);
  min-width: 80px;
  height: 40px;
  font-size: 16px;
}
button.btn-theme-dialog {
  background-color: #f1880e;
  border-radius: 50px;
  color: #fff;
  border: none;
  margin: 0 0.5rem;
  min-width: 80px;
  height: 40px;
  font-size: 16px;
  box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.16);
}
.MuiInputLabel-outlined.MuiInputLabel-shrink {
  transform: translate(8px, -12px) scale(1) !important;
  background-color: #ffff !important;
  padding: 0 0.4rem !important;
  font-size: small !important;
}
.modal-header {
  /* padding: 0 0 1.5rem 0em; */
}
.profile_settings {
  background-color: #fff;
  padding: 1.5rem 1rem;
  border-radius: 13px;
  transition: all 0.5s;
  box-shadow: 0 12px 15px 0px rgb(0 0 0 / 10%);
}
.img-file-table {
  height: 18px;
  width: 18px;
  margin: 0 0.8rem 0 0;
}

.page_subscription {
  max-width: 500px;
  margin: 40px auto;
}
.page_subscription .btn-theme {
  margin-top: 20px;
  background-color: #f1880e;
  width: 100%;
  border-radius: 50px;
  color: #fff;
  font-size: 24px;
  height: 60px;
  margin-bottom: 1.2rem;
  border: none;
}

.page_subscription .logout {
  color: #f1880e;
  width: 100px;
  margin: auto;
  display: table;
  font-size: 18px;
  background-color: #f1f1f1;
}

.page_subscription .greetings {
  margin: 20px 0;
}

.form-controls {
  height: 50px;
  padding: 8px 14px;
  border-radius: 8px;
  color: #6e6e6e;
  border: 1px solid #e5e1dc;
  background-color: #fff;
  letter-spacing: 0.1px;
  font-size: 14px;
  width: max-content;
  min-width: 250px;
  /* &:focus-visible {
    outline: none;
} */
}

.search-wrapper {
  position: relative;
}
.search-wrapper .day-filter-popup {
  left: 0;
  top: 115%;
  position: absolute;
  padding: 20px;
  background-color: #fff;
  width: 100%;
  z-index: 10;
  font-size: 14px;
  border-radius: 8px;
  box-shadow: 0 1px 14px -2px rgba(0, 0, 0, 0.32);
  -webkit-box-shadow: 0 1px 14px -2px rgba(0, 0, 0, 0.32);
  -moz-box-shadow: 0 1px 14px -2px rgba(0, 0, 0, 0.32);
}
.search-wrapper {
  display: flex;
  margin: 0 10px;
}
.search-wrapper .input-value {
  border-radius: 25px 0 0 25px;
  padding: 6px 22px 8px;
  background: #fff;
  border: none;
  font-size: 12px;
  display: flex;
  align-items: center;
  font-weight: 700;
}
.search-wrapper .search-button {
  border-radius: 0 25px 25px 0;
  background: #f1880e;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-right: 8px;
}
.search-wrapper .search-button svg {
  width: 18px;
  height: 18px;
  stroke: #fff;
}

.custom-filter-dropdown {
  position: relative;
}
.custom-filter-dropdown .com-select {
  position: relative;
  cursor: pointer;
}
.custom-filter-dropdown .com-select:before {
  position: absolute;
  content: "v";
  content: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='rgba(0,0,0,.3)'%3E%3Cpath d='M16.293 9.293L12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z'/%3E%3C/svg%3E");
  left: 85%;
}
.custom-filter-dropdown .dropdown-content {
  left: 0;
  top: 115%;
  position: absolute;
  z-index: 2;
  padding: 20px;
  background-color: #fff;
  width: 100%;
  border-radius: 15px;
  box-shadow: 0 1px 14px -2px rgba(0, 0, 0, 0.32);
  -webkit-box-shadow: 0 1px 14px -2px rgba(0, 0, 0, 0.32);
  -moz-box-shadow: 0 1px 14px -2px rgba(0, 0, 0, 0.32);
}
.custom-filter-dropdown .dropdown-content .dropdown-input {
  padding: 6px 10px;
  margin: 5px 0;
  width: 100%;
}

.custom-filter-dropdown .dropdown-content .dropdown-input:focus-visible {
  outline: none;
}
.custom-filter-dropdown .dropdown-content .com-button {
  display: flex;
  margin-left: auto;
  margin-top: 10px;
}

@media (max-width: 768px) {
  .custom-filter-dropdown {
    justify-content: start;
  }
}
.label-cursor {
  cursor: pointer;
}

.password-requirement-text {
  text-align: left;
  width: 240px;
  margin-left: 29px;
}

.password-requirement-text > p {
  color: #8e8e8e;
  font-size: 14px !important;
  margin-bottom: 0 !important;
}

.password-block {
  display: flex;
}

.password-confirmpassword {
  flex: auto;
}

.pagination-styles {
  outline: none;
}
.pagination-styles {
  padding: 30px 0;
  display: flex;
  justify-content: center;
  list-style: none;
}
.pagination-styles li {
  margin: 0 5px;
}
.pagination-styles > li > a {
  border: 1px solid #6e6e73;
  padding: 5px 10px;
  outline: none;
  cursor: pointer;
  border-radius: 5px;
}
.pagination-styles > .active > a,
.pagination-styles > .active > a:focus,
.pagination-styles > .active > a:hover,
.pagination-styles > .active > span,
.pagination-styles > .active > span:focus,
.pagination-styles > .active > span:hover {
  background-color: #6e6e73;
  border-color: #6e6e73;
  outline: none;
}
.pagination-styles > .active > a {
  background-color: #6e6e73;
  border-color: #6e6e73;
  color: #fff;
}
.pagination-styles > li > a,
.pagination-styles > li > span {
  color: #6e6e73;
}

